modified some color on UI and also added Admin accounts managment feature

--- a/html/admin.html
+++ b/html/admin.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Urugano breeze</title>
+      <title>Log-in as an Admin</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
@@ -109,7 +109,7 @@
             <div class="row" id="apartmentList">
                <main>
                   <section class="login-section">
-                      <div class="login-container">
+                      <div class="login-container log">
                           <h2>Admin Login</h2>
                           <form class="login-form" id="login-form">
                               <div class="input-group">
