--- a/html/apartments.html
+++ b/html/apartments.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Urugano breeze</title>
+      <title>Apartments</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
@@ -137,7 +137,7 @@
             <button id="search-btn">Search</button>
          </div>
          <div class="container">
-            <div class="row" id="apartmentList">
+            <div class="row raw" id="apartmentList">
                <div class="col-md-4 col-sm-6 apartment-item" onclick="window.location.href='urugano_apartment10.html'">
                   <div id="serv_hover" class="room">
                      <div class="room_img">
@@ -147,7 +147,7 @@
                         <h3>Urugano Breeze Apartments</h3>
                         <p class="location"> Kigali, Kicukiro, KK 3 st</p>
                         <p class="night"> 55 nights</p>
-                        <p class="Price-range">US$1,200</p>
+                        <p class="final-price">US$1,200</p>
                         <button class="av-btn" onclick="window.location.href='urugano_apartment10.html'"> Check availability</button>
                      </div>
                   </div>
