--- a/html/booking.html
+++ b/html/booking.html
@@ -82,6 +82,9 @@
                                 <li class="nav-item">
                                  <a class="nav-link" href="testimonial-admin.html">Testimonial</a>
                                </li>
+                               <li class="nav-item">
+                                 <a class="nav-link" href="co-admins.html">Accounts Manager</a>
+                             </li> 
                             </ul>
                         </div>
                      </nav>
