--- a/html/people.html
+++ b/html/people.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Urugano breeze</title>
+      <title>GOGO Home & Apartment</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
@@ -89,7 +89,7 @@
                               <li class="nav-item ">
                                 <a class="nav-link" href="../index.html">Home</a>
                               </li>
-                              <li class="nav-item">
+                              <li class="nav-item active">
                                 <a class="nav-link" href="people.html">Advertise</a>
                               </li>
                               <li class="nav-item">
@@ -98,6 +98,9 @@
                                <li class="nav-item">
                                  <a class="nav-link" href="testimonial-admin.html">Testimonial</a>
                                </li>
+                               <li class="nav-item">
+                                 <a class="nav-link" href="co-admins.html">Accounts Manager</a>
+                             </li> 
                            </ul>
                          </div>
                       </nav>
@@ -126,7 +129,7 @@
             <div class="row" id="apartmentList">
                <main>
                   <section class="advert-form-section">
-                      <div class="container">
+                      <div class="advert-container">
                           <div class="card shadow-lg p-4">
                               <h2 class="text-center mb-4">Create Your Advertisement</h2>
                               <form class="advert-form" id="ad-form">
