--- a/html/urugano_apartment10.html
+++ b/html/urugano_apartment10.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Urugano Breeze</title>
+    <title>GOGO Home & Apartment</title>
     <link rel="icon" href="../assets/images/tablogo.png" type="image/png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -86,7 +86,7 @@
             <div class="row">
                 <!-- Apartment Cards -->
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="room card border-0 shadow-sm">
+                    <div class="room">
                       <img src="../assets/images/12.webp" class="card-img-top" alt="4 Bedroom Apartment" onclick="window.location.href='karisimbi.html'">
                       <div class="card-body">
                         <h3 class="card-title">KARISIMBI Apartment</h3>
@@ -109,7 +109,7 @@
                     </div>
                 </div>                  
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <div href="apartment-details20.html" class="room card border-0 shadow-sm">
+                    <div href="apartment-details20.html" class="room">
                         <img src="../assets/images/23.jpg" class="card-img-top" alt="2 Bedroom Suite" onclick="window.location.href='muhabura.html'">
                         <div class="card-body">
                             <h3 class="card-title">MUHABURA Apartment</h3>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="room card border-0 shadow-sm">
+                    <div class="room">
                         <img src="../assets/images/26.jpg" class="card-img-top" alt="2 Bedroom Suite" onclick="window.location.href='sabyinyo.html'">
                         <div class="card-body">
                             <h3 class="card-title">SABYINYO Apartement</h3>
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="room card border-0 shadow-sm">
+                    <div class="room">
                         <img src="../assets/images/11.webp" class="card-img-top" alt="2 Bedroom Suite" onclick="window.location.href='gahinga.html'">
                         <div class="card-body">
                             <h3 class="card-title">GAHINGA Apartement</h3>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <div class="room card border-0 shadow-sm">
+                    <div class="room">
                         <img src="../assets/images/6.webp" class="card-img-top" alt="2 Bedroom Suite" onclick="window.location.href='bisoke.html'">
                         <div class="card-body">
                             <h3 class="card-title">BISOKE Apartement</h3>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 mb-4">
-                  <div class="room card border-0 shadow-sm" onclick="window.location.href='space.html'">
+                  <div class="room" onclick="window.location.href='space.html'">
                       <img src="../assets/images/13.webp" class="card-img-top" alt="Party Space">
                       <div class="card-body">
                           <h3 class="card-title">Space for Partying</h3>
