modified search-bar feature

--- a/html/co-admins.html
+++ b/html/co-admins.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Testimonials</title>
+      <title>GOGO Co-Admins</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
@@ -111,6 +111,9 @@
                                  <div class="input-group">
                                      <input type="password" id="password" name="password" placeholder="Password" required>
                                  </div>
+                                 <div class="input-group">
+                                    <input type="password" id="password" name="password" placeholder="Confirm Password" required>
+                                </div>
                                  <button type="submit" class="login-btn">Add an Account</button>
                              </form>
                          </div>
