--- a/html/space.html
+++ b/html/space.html
@@ -26,6 +26,10 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <!-- Tweaks for older IEs-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
       <!--[if lt IE 9]>
          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -72,25 +76,28 @@
     <!-- Back Button -->
 
     <div class="container">
-        <div class="search-bar">
-            <div class="search-item">
-              <label for="location">Location:</label>
-              <input type="text" id="location" placeholder="Enter location">
+        <div class="search-bar-wrapper">
+            <div class="search-bar">
+                <div class="search-item location">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="icon-location" width="16" height="16">
+                     <path fill="currentColor" d="M192 0C86 0 0 86 0 192c0 77.1 27.6 99.6 172.8 306.7 10.1 14.2 32.3 14.2 42.4 0C356.4 291.6 384 269.1 384 192 384 86 298 0 192 0zm0 272c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"/>
+                 </svg>
+                 
+                    <input type="text" placeholder="Enter location">
+                </div>
+                <div class="search-item dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon-location" width="30px" height="30px"><path fill="currentColor" d="M152 64c0 13.3-10.7 24-24 24s-24-10.7-24-24V16c0-13.3 10.7-24 24-24s24 10.7 24 24v48zm192 0c0 13.3-10.7 24-24 24s-24-10.7-24-24V16c0-13.3 10.7-24 24-24s24 10.7 24 24v48zM0 80C0 53.5 21.5 32 48 32h48V16c0-8.84 7.2-16 16-16h32c8.8 0 16 7.16 16 16v16h128V16c0-8.84 7.2-16 16-16h32c8.8 0 16 7.16 16 16v16h48c26.5 0 48 21.5 48 48v48H0V80zm0 96v272c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V176H0zm128 80c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48zm0 128c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48zm128-128c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48zm0 128c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48zm128-128c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48zm0 128c8.8 0 16 7.2 16 16v48c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h48z"></path></svg>
+                    <input type="text" id="checkin-date" placeholder="Check-in date">
+                    <span>-</span>
+                    <input type="text" id="checkout-date" placeholder="Check-out date">
+                </div>
+                <div class="search-item guests">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="icon-user" width="16" height="16"><path fill="currentColor" d="M224 256C317 256 384 189 384 96s-67-160-160-160S64 3 64 96s67 160 160 160zm208 160h-26.2C385.2 392.6 305.3 336 224 336s-161.2 56.6-181.8 80H16c-8.8 0-16 7.2-16 16v48c0 8.8 7.2 16 16 16h416c8.8 0 16-7.2 16-16v-48c0-8.8-7.2-16-16-16z"></path></svg>
+                    <input type="number" placeholder="Guests">
+                </div>
+                <button id="search-btn">Search</button>
             </div>
-            <div class="search-item">
-              <label for="checkin">Check-in:</label>
-              <input type="date" id="checkin">
-            </div>
-            <div class="search-item">
-              <label for="checkout">Check-out:</label>
-              <input type="date" id="checkout">
-            </div>
-            <div class="search-item">
-              <label for="guests">Guests:</label>
-              <input type="number" id="guests" value="2" min="1">
-            </div>
-            <button id="search-btn">Search</button>
-         </div>
+        </div>
         <div class="d-flex justify-content-between align-items-center my-4">
             <h1 class="text-center my-5 flex-grow-1">SPACE FOR PARTYING</h1>
             <div class="d-flex align-items-center">
@@ -180,9 +187,10 @@
     </footer>
 
     <!-- JavaScript Files -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="../js/custom.js"></script>
+    <script src="../js/flatpkr.js"></script>
 </body>
 </html>
