modified some btn colors

--- a/html/bisoke.html
+++ b/html/bisoke.html
@@ -106,7 +106,7 @@
                     <p class="price"><span class="discounted-price" id="discounted-price">US$2,450</span><span class="final-price" id="final-price">US$2,242</span><span class="nights"> / 5 nights</span></p>
                 </div>
                 <!-- Book Now Button -->
-                <a href="userdata.html" class="btn btn-danger">Book Now</a>
+                <a href="userdata.html" class="btn btn-danger">Book This Apartment</a>
             </div>
         </div>
         
