--- a/UI/html/bisoke.html
+++ b/UI/html/bisoke.html
@@ -61,7 +61,7 @@
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="apartments.html">Our Apartments</a></li>
+                                    <li class="nav-item"><a class="nav-link active" href="apartments.html">Our Apartments</a></li>
                                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                                     <li class="nav-item"><a class="nav-link" href="testimonial.html">testimonial</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
