integrated advert on frontend

--- a/UI/html/booking.html
+++ b/UI/html/booking.html
@@ -180,216 +180,6 @@
                    <td>150,000 EUR</td>
                    <td class="status">Pending</td>
                </tr>
-               <tr>
-                  <td>67890</td>
-                  <td>Sabyinyo</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Pending</td>
-               </tr>
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Pending</td>
-               </tr> 
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr> 
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>  
-               <tr>
-                  <td>67890</td>
-                  <td>Maribu</td>
-                  <td>John Smith</td>
-                  <td>johnsmith@example.com</td>
-                  <td>+3345678901</td>
-                  <td>Germany</td>
-                  <td>Berlin</td>
-                  <td class="book-date">2024-04-01</td>
-                  <td>2024-04-10</td>
-                  <td>2024-04-20</td>
-                  <td>10</td>
-                  <td>150,000 EUR</td>
-                  <td class="status">Confirmed</td>
-               </tr>   
                <!-- Additional rows as needed -->
            </tbody>
        </table>
@@ -455,5 +245,6 @@
       <!-- sidebar -->
       <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="../js/custom.js"></script>
+      <script src="../js/bookings.js"></script>
    </body>
 </html>
