--- a/UI/html/gallery.html
+++ b/UI/html/gallery.html
@@ -160,7 +160,7 @@
                    </figure>
                </a>
            </div>
-           <div class="col-md-4 col-sm-6 gallery-item">
+           <div class="col-md-4 col-sm-6 galcolor: red;lery-item">
                <a href="../assets/images/12.webp" data-lightbox="gallery" data-title="Image 9">
                    <figure>
                        <img src="../assets/images/12.webp" alt="#"/>
