--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -26,6 +26,7 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
       <!--[if lt IE 9]>
          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -96,7 +97,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Administrator section</h2>
+                     <h2></h2>
                   </div>
                </div>
             </div>
@@ -116,8 +117,12 @@
                                  <input type="email" id="email" name="email" placeholder="Email" required>
                               </div>
                               <div class="input-group">
-                                  <input type="password" id="password" name="password" placeholder="Password" required>
-                              </div>
+                                 <input type="password" id="password" name="password" placeholder="Password" required>
+                                 <button type="button" class="toggle-password" id="toggle-password" aria-label="Show password">
+                                     <i class="fas fa-eye"></i> <!-- Font Awesome icon -->
+                                 </button>
+                                 <p class="admin-error-message"></p> 
+                             </div>                                                                                    
                               <button type="button" class="login-btn" id="login-btn">Log In</button>
                           </form>
                       </div>
@@ -127,17 +132,18 @@
       </div>
   </div>
   
-  <!-- Modal Structure -->
-  <div id="verification-modal" class="modal">
+   <!-- Modal Structure -->
+   <div id="verification-modal" class="modal">
       <div class="modal-content">
           <h2>Verification Required</h2>
           <p>Please enter the 6-digit code sent to your email.</p>
           <div class="input-group">
               <input type="text" id="verification-code" placeholder="Enter Verification Code" required>
+              <p class="admin-error-message"></p>
           </div>
           <button type="button" class="confirm-btn" id="confirm-btn">Confirm</button>
       </div>
-  </div>
+   </div>
   
       <!-- end our_room -->
      
@@ -200,8 +206,6 @@
       <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="../js/custom.js"></script>
       <script src="../js/modal.js"></script>
-      <script>
-         // Base URL of your API (adjust as needed)
-      </script>
+      <script src="../js/hide-show.js"></script>
    </body>
 </html>
