--- a/UI/html/co-admins.html
+++ b/UI/html/co-admins.html
@@ -26,6 +26,7 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
       <!--[if lt IE 9]>
          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -90,7 +91,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Administrator section</h2>
+                     <h2></h2>
                   </div>
                </div>
             </div>
@@ -103,22 +104,29 @@
                   <main>
                      <section class="login-section">
                          <div class="login-container">
-                             <h2>Create an Admin Accoung</h2>
-                             <form class="login-form" id="login-form">
+                             <h2>Create an Admin Account</h2>
+                             <form class="login-form" id="createAdminForm">
                                  <div class="input-group">
-                                     <input type="text" id="username" name="username" placeholder="Email" required>
+                                     <input type="email" id="email" name="email" placeholder="Email" required>
                                  </div>
                                  <div class="input-group">
                                      <input type="password" id="password" name="password" placeholder="Password" required>
+                                     <button type="button" class="toggle-password" id="toggle-password" aria-label="Show password">
+                                         <i class="fas fa-eye"></i>
+                                     </button>
                                  </div>
                                  <div class="input-group">
-                                    <input type="password" id="password" name="password" placeholder="Confirm Password" required>
-                                </div>
+                                     <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
+                                     <button type="button" class="toggle-password" id="toggle-password-1" aria-label="Show password">
+                                         <i class="fas fa-eye"></i>
+                                     </button>
+                                 </div>
+                                 <p class="admin-error-message-1"></p>
                                  <button type="submit" class="login-btn">Add an Account</button>
                              </form>
                          </div>
                      </section>
-                 </main>                       
+                 </main>                                   
                </div>
             </div>
          </div>
@@ -181,5 +189,11 @@
       <!-- sidebar -->
       <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="../js/custom.js"></script>
+      <script src="../js/co-admins.js"></script>
+      <script src="../js/hide-show.js"></script>
+      <script>
+       
+      </script>
    </body>
 </html>
+ 
