--- a/UI/html/people.html
+++ b/UI/html/people.html
@@ -140,10 +140,11 @@
                                 </div>                                                                 
                                   <div class="form-group">
                                       <label for="ad-image">Upload Image</label>
-                                      <input type="file" id="ad-image" name="ad_image" accept="image/*" class="form-control-file" required>
+                                      <input type="file" id="ad-image" name="advertisement_image" accept="image/*" class="form-control-file" required>
                                   </div>
                                   <button type="submit" class="btn btn-primary btn-block">Send</button>
                               </form>
+                              <div class="admin-error-message"></div>
                           </div>
                       </div>
                   </section>
@@ -206,5 +207,69 @@
       <!-- Javascript files-->
       <script src="../js/bootstrap.bundle.min.js"></script>
       <script src="../js/jquery.dataTables.min.js"></script>
+      <script>
+         // Base API URL
+const API_BASE_URL = "http://localhost:5000/api/advertisements";
+
+// Handle advertisement form submission
+document.getElementById("ad-form").addEventListener("submit", async function (event) {
+    event.preventDefault();
+
+    // Get the form data
+    const formData = new FormData();
+    const adText = document.getElementById("ad-text").value.trim();
+    const adImage = document.getElementById("ad-image").files[0];
+
+    if (!adText) {
+        alert("Advertisement text is required.");
+        return;
+    }
+
+    // Append data to FormData
+    formData.append("advertisementText", adText);
+    if (adImage) {
+        formData.append("advertisement_image", adImage); // Match the backend file field name
+    }
+
+    try {
+        // Show a loader while processing (optional)
+        toggleLoader(true);
+
+        // Make a POST request to the backend API
+        const response = await fetch(`${API_BASE_URL}/send`, {
+            method: "POST",
+            body: formData,
+        });
+
+        const data = await response.json();
+
+        // Hide the loader
+        toggleLoader(false);
+
+        if (response.ok) {
+            alert("Advertisement sent successfully!");
+            // Optionally reset the form
+            document.getElementById("ad-form").reset();
+        } else {
+            alert(data.error || "Failed to send the advertisement. Please try again.");
+        }
+    } catch (error) {
+        console.error("Error sending advertisement:", error);
+        alert("An error occurred while sending the advertisement. Please try again.");
+    }
+});
+
+/**
+ * Toggle loader visibility (optional)
+ * @param {boolean} show - Whether to show or hide the loader
+ */
+function toggleLoader(show) {
+    const loader = document.querySelector(".loader_bg");
+    if (loader) {
+        loader.style.display = show ? "block" : "none";
+    }
+}
+
+      </script>
    </body>
 </html>
