debugged compound price

--- a/UI/html/booking.html
+++ b/UI/html/booking.html
@@ -74,7 +74,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                  <a class="nav-link" href="../index.html">
+                                  <a class="nav-link" href="admin-dashboard.html">
                                       <i class="fas fa-home"></i> Home
                                   </a>
                               </li>
@@ -170,36 +170,7 @@
            </thead>
            <tbody>
                <!-- Sample data rows (for testing purposes) -->
-               <tr>
-                   <td>12345</td>
-                   <td>Kalisimbi</td>
-                   <td>Jane Doe</td>
-                   <td>janedoe@gmail.com</td>
-                   <td>+4458909685</td>
-                   <td>France</td>
-                   <td>Paris</td>
-                   <td class="book-date">2024-05-01</td>
-                   <td>2024-04-05</td>
-                   <td>2024-04-15</td>
-                   <td>10</td>
-                   <td>120,000 RWF</td>
-                   <td class="status">Confirmed</td>
-               </tr>
-               <tr>
-                   <td>67890</td>
-                   <td>Muhabura</td>
-                   <td>John Smith</td>
-                   <td>johnsmith@example.com</td>
-                   <td>+3345678901</td>
-                   <td>Germany</td>
-                   <td>Berlin</td>
-                   <td class="book-date">2024-04-01</td>
-                   <td>2024-04-10</td>
-                   <td>2024-04-20</td>
-                   <td>10</td>
-                   <td>150,000 EUR</td>
-                   <td class="status">Pending</td>
-               </tr>
+               
                <!-- Additional rows as needed -->
            </tbody>
        </table>
