--- a/UI/html/people.html
+++ b/UI/html/people.html
@@ -76,7 +76,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
+                              <a href="admin-dashboard.html"><img src="../assets/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -89,7 +89,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                  <a class="nav-link" href="../html/admin-dashboard.html">
+                                  <a class="nav-link" href="admin-dashboard.html">
                                       <i class="fas fa-home"></i> Home
                                   </a>
                               </li>
@@ -186,7 +186,7 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="admin-dashboard.html">Home</a></li>
                         <li><a href="people.html"> about</a></li>
                         <li class="active"><a href="booking.html">Booking</a></li>
                      </ul>
