--- a/UI/html/co-admins.html
+++ b/UI/html/co-admins.html
@@ -64,7 +64,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                  <a class="nav-link" href="../html/admin-dashboard.html">
+                                  <a class="nav-link" href="admin-dashboard.html">
                                       <i class="fas fa-home"></i> Home
                                   </a>
                               </li>
