--- a/UI/html/modify-Apartment.html
+++ b/UI/html/modify-Apartment.html
@@ -50,7 +50,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
+                              <a href="admin-dashboard.html"><img src="../assets/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -63,7 +63,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../index.html">
+                                    <a class="nav-link" href="admin-dashboard.html">
                                         <i class="fas fa-home"></i> Home
                                     </a>
                                 </li>
