--- a/UI/index.html
+++ b/UI/index.html
@@ -102,15 +102,15 @@
             </ol>
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="assets/images/9.webp" alt="First slide">
+                  <img class="first-slide" src="assets/images/ban8.jpg" alt="First slide">
                   <div class="container">
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="second-slide" src="assets/images/viewurugano.jpg" alt="Second slide">
+                  <img class="second-slide" src="assets/images/ban4.jpg" alt="Second slide">
                </div>
                <div class="carousel-item">
-                  <img class="third-slide" src="assets/images/6.webp" alt="Third slide">
+                  <img class="third-slide" src="assets/images/ban10.jpg" alt="Third slide">
                </div>
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
