--- a/UI/html/testimonial-admin.html
+++ b/UI/html/testimonial-admin.html
@@ -195,7 +195,7 @@
       <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="../js/custom.js"></script>
       <script>
-         const API_BASE_URL = "http://localhost:5000/api/testimonials"; // Update with your API URL
+   const API_BASE_URL = "https://gogovillas.com/api/testimonials"; // Update with your API URL
 
 // Handle form submission
 document.getElementById("testimonialForm").addEventListener("submit", async function (event) {
