--- a/UI/html/booking.html
+++ b/UI/html/booking.html
@@ -193,23 +193,23 @@
              </div>
              <div class="form-group">
                  <label for="guest">Guest Name:</label>
-                 <input type="text" id="guest" name="guest" placeholder="Enter Guest's full name" required>
+                 <input type="text" id="guest" name="guest" placeholder="Enter Guest's full name">
              </div>
              <div class="form-group">
                  <label for="email">Email:</label>
-                 <input type="email" id="email" name="email" placeholder="Enter Guest's email" required>
+                 <input type="email" id="email" name="email" placeholder="Enter Guest's email">
              </div>
              <div class="form-group">
                  <label for="phone">Phone Number:</label>
-                 <input type="tel" id="phone" name="phone" placeholder="Enter Guest's phone number" required>
+                 <input type="tel" id="phone" name="phone" placeholder="Enter Guest's phone number">
              </div>
              <div class="form-group">
                  <label for="country">Country:</label>
-                 <input type="text" id="country" name="country" placeholder="Enter Guest's country" required>
+                 <input type="text" id="country" name="country" placeholder="Enter Guest's country">
              </div>
              <div class="form-group">
                  <label for="city">City:</label>
-                 <input type="text" id="city" name="city" placeholder="Enter Guest's city" required>
+                 <input type="text" id="city" name="city" placeholder="Enter Guest's city">
              </div>
              <div class="form-group">
                  <label for="arrivalDate">Arrival Date * </label>
@@ -308,7 +308,7 @@
              try {
                  if (buttonClicked === 'ADD') {
                      // ADD functionality
-                     const response = await fetch('http://localhost:5000/api/bookings/create', {
+                     const response = await fetch('https://gogovillas.com/api/bookings/create', {
                          method: 'POST',
                          headers: {
                              'Content-Type': 'application/json',
@@ -327,7 +327,7 @@
                      }
                  } else if (buttonClicked === 'HIDE') {
                      // HIDE functionality
-                     const response = await fetch('http://localhost:5000/api/hide-apartment', {
+                     const response = await fetch('https://gogovillas.com/api/hide-apartment', {
                          method: 'POST',
                          headers: {
                              'Content-Type': 'application/json',
@@ -345,7 +345,7 @@
                      }
                  } else if (buttonClicked === 'UNHIDE') {
                      // UNHIDE functionality
-                     const response = await fetch('http://localhost:5000/api/unhide-apartment', {
+                     const response = await fetch('https://gogovillas.com/api/unhide-apartment', {
                          method: 'POST',
                          headers: {
                              'Content-Type': 'application/json',
