--- a/UI/html/people.html
+++ b/UI/html/people.html
@@ -223,7 +223,7 @@
       <script src="../js/jquery.dataTables.min.js"></script>
       <script>
          // Base API URL
-const API_BASE_URL = "http://localhost:5000/api/advertisements";
+const API_BASE_URL = "https://gogovillas.com/api/advertisements";
 
 // Handle advertisement form submission
 document.getElementById("ad-form").addEventListener("submit", async function (event) {
@@ -283,7 +283,6 @@ function toggleLoader(show) {
         loader.style.display = show ? "block" : "none";
     }
 }
-
       </script>
    </body>
 </html>
